// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders answer style correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#4D8AF0",
        "borderRadius": 10,
        "elevation": 4,
        "height": 45,
        "justifyContent": "center",
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.23,
        "shadowRadius": 2.62,
      },
      undefined,
      false,
    ]
  }
>
  <Text
    style={
      Object {
        "color": "#FFFFFF",
        "fontSize": 33,
        "fontWeight": "bold",
      }
    }
  >
    Submit
  </Text>
</View>
`;

exports[`renders default style correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#F7F7F7",
        "borderColor": "#78809A",
        "borderRadius": 10,
        "borderWidth": 1,
        "elevation": 4,
        "height": 45,
        "justifyContent": "center",
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.23,
        "shadowRadius": 2.62,
      },
      undefined,
      false,
    ]
  }
>
  <Text
    style={
      Object {
        "color": "#78809A",
        "fontSize": 33,
        "fontWeight": "bold",
      }
    }
  >
    Submit
  </Text>
</View>
`;
